--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ homepage: https://telephony.shounakmulay.dev
 repository: https://github.com/shounakmulay/Telephony
 
 environment:
-  sdk: '>=2.15.1 <3.0.0'
+  sdk: ">=2.15.1 <4.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
@@ -17,9 +17,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.10
-  collection: ^1.16.0
-  mockito: ^5.2.0
+  build_runner: ^2.4.11
+  collection: ^1.18.0
+  mockito: ^5.4.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
